[workspace]
members = [
    "src/engine",
    "src/framework",
    "src/client",
    "src/server",
]

[profile.dev]
overflow-checks = true
panic = "unwind"

[profile.release]
lto = true
incremental = false
overflow-checks = false
panic = "unwind"

[profile.bench]
codegen-units = 1
overflow-checks = false
