[package]
name = "kkcloud"
version = "0.0.4"

edition = "2018"
authors = ["FanHui <kt71@qq.com>", "FanHui <fanhui.x@gmail.com>"]
description = "A lightweight private cloud solution for SME scenarios."
license = "MIT OR Apache-2.0"
keywords = ["firecracker", "qemu", "docker", "openstack", "k8s"]
categories = ["command-line-utilities"]
homepage = "https://gitee.com/kt10/kkcloud"

[dependencies]
kkcloud-client = "0"
kkcloud-server = "0"

[features]

[[bin]]
name = "kkcloud-client"
path = "src/bins/client.rs"

[[bin]]
name = "kkcloud-server"
path = "src/bins/server.rs"
